<resources>
    <string name="app_name">KolChat</string>

    <string name="title_activity_login">Sign in</string>

    <string name="account_type" translatable="false">KoL</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_ro_in_progress">Rollover is in progress. Please try again later</string>
    <string name="error_field_required">This field is required</string>

    <string name="menu_option_advancedsettings">Advanced</string>
    <string name="menu_option_logout">Logout</string>
    <string name="menu_option_send_logs">Send logs</string>

    <!-- Arguments for fragments since navgraph wants it to be a string in xml -->
    <string name="argument_chat_message_id" translatable="false">argument_chat_message_id</string>
    <string name="argument_chat_message_name" translatable="false">argument_chat_message_name</string>
    <string name="argument_chat_message_is_private" translatable="false">argument_chat_message_is_private</string>

    <string name="remove_chat_dialog_message_group">Do you want to close %s? The chat messages will be removed locally, but this does not leave the room</string>
    <string name="remove_chat_dialog_message_pm">Do you want to delete your chat with %s? The chat messages will be removed locally, but this does not baleet them</string>
    <string name="remove_chat_dialog_title">Close this chat?</string>
    <string name="remove_chat_dialog_option_yes">Close it</string>
    <string name="remove_chat_dialog_option_no">Cancel</string>

    <string name="feedback_dialog_hint">Enter any feedback you have</string>
    <string name="feedback_dialog_submit">Send Feedback</string>
    <string name="feedback_dialog_cancel">Cancel</string>

    <!--Preferences-->
    <string name="title_prefs_screen">Settings</string>
    <string name="pref_privacy_title">Data &amp; Privacy</string>
    <string name="pref_send_username_title">Send username with crash reports</string>
    <string name="pref_send_username_summary">Sends your username (if logged in) with crash reports in case more information is needed</string>
    <string name="pref_log_to_crashlytics_title">Log anomalous behavior</string>
    <string name="pref_log_to_crashlytics_summary">Anonymized user data is logged to help fix crashes. Makes fixing bugs easier</string>
    <string name="pref_send_analytics_summary">Aggregated analytics and performance data is used to figure out what features are being used and should be worked on next</string>
    <string name="pref_send_analytics_title">Send usage analytics</string>
    <string name="pref_perf_title">Battery Saving</string>
    <string name="pref_enable_slow_polling_in_bg_title">Battery saving chat updates</string>
    <string name="pref_enable_slow_polling_in_bg_summary">Chat updates slowly, but does not noticeably impact battery. Chat updates at most once every 15 minutes when not in use</string>
    <string name="pref_enable_fast_polling_bg_title">More frequent chat updates</string>
    <string name="pref_enable_fast_polling_bg_summary">Chat updates once every minute but can have a large impact on battery</string>
    <string name="pref_advanced_settings">Advanced Settings</string>
    <string name="pref_enable_androidx_paging_title">Use paging (Experimental)</string>
    <string name="pref_enable_androidx_paging_summary">Lets app scroll up to load older chat, but might cause issues</string>
</resources>
