<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/nav_chat_list">
    <fragment
        android:id="@+id/nav_chat_list"
        android:name="biz.ajoshi.kolchat.ui.ChatChannelListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/channel_list" />
    <fragment
        android:id="@+id/nav_chat_message"
        android:name="biz.ajoshi.kolchat.ui.ChatMessageFragment"
        tools:layout="@layout/chat_message">
        <argument
            android:defaultValue="newbie"
            android:name="@string/argument_chat_message_id"/>
        <argument
            android:defaultValue="newbie"
            android:name="@string/argument_chat_message_name"/>
        <argument
            android:defaultValue="false"
            android:name="@string/argument_chat_message_is_private"/>
    </fragment>
    <fragment
        android:id="@+id/nav_preferences"
        android:name="biz.ajoshi.kolchat.PreferenceFrag"
        android:label="@string/title_prefs_screen" />
</navigation>
